added photo viewing in a modal window, edits made

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Базовая сборка проекта</title>
+    <title>RBC News</title>
   </head>
   <body>
     <div id="app"></div>
